# deriv-ws

./: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  ADMIN_SETUP_GUIDE.md  AUTOMATED_DEPLOY.md  CODEBASE_AUDIT_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DERIV_API.md  DERIV_SETUP.md  DEVELOPMENT_RULES.md  DEVELOPMENT_TEST_COMPLETE.md  DEVELOPMENT_TEST_RESULTS.md  Dockerfile  Dockerfile.ai-layer  Dockerfile.api  Dockerfile.api-gateway  Dockerfile.quant  Dockerfile.quant-engine  FIXES_APPLIED.md  IMMEDIATE_ACTION_CHECKLIST.md  LATEST_CHANGES_SUMMARY.md  LICENSE  PRODUCTION_AUDIT.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_FIXES_COMPLETE.md  PRODUCTION_STATUS_SUMMARY.md  QUICK_ADMIN_SETUP.sql  QUICK_DEPLOY.md  RAILWAY_DEPLOYMENT_STATUS.md  RAILWAY_ENV_SETUP.md  RAILWAY_REDIS_SETUP.md  RAILWAY_REDIS_VISUAL_GUIDE.md  README.md  REBUILD_PLAN.md  REPOSITORY_STRUCTURE.md  TRADING_BOT_ARCHITECTURE.md  VERIFY_ADMIN.sql  (+22 more)
apps/ai-layer/: Dockerfile  README.md  drift_report.json  main.py  pyproject.toml  requirements.txt  test_shadow.py  train_v2.py
apps/ai-layer/config/: governance_metrics.json
apps/ai-layer/datasets/: manifest.json  training_snapshot_v1.csv
apps/ai-layer/models/: manifest.json  model_v1_3.json  model_v1_4.json  model_v1_4.pkl
apps/ai-layer/scripts/: ci_gate.sh  comparative_analytics.py  compose_dataset.py  detect_auto_disable.py  detect_drift.py  detect_regime_shift.py  emergency_stop.py  evaluate_replay.py  gatekeeper.py  generate_shadow_report.py  monitor_threshold_drift.py  replay_thresholds.py  rivalry.py  rollback_model.py  (+1 more)
(+551 files in other folders)
